# amplrs

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
examples/: debug.rs  dietexample.cc  dietexample.rs  firstexample.cc  firstexample.rs  multidimensionalexample.cc  multidimensionalexample.rs  optionsexample.cc  optionsexample.rs  trackingmodel.rs  writemodel.c  writemodel.rs
models/diet/: diet.csv
models/errors/: ampl.lic.invalid
models/tables/: assets.tab  tables.mod
src/: ampl.rs  constraint.rs  constraintinstance.rs  dataframe.rs  entity.rs  environment.rs  error.rs  lib.rs  objective.rs  objectiveinstance.rs  parameter.rs  prelude.rs  set.rs  setinstance.rs  suffix.rs  tuple.rs  variable.rs  variableinstance.rs  variant.rs
tests/: ampl.rs  constraint.rs  dataframe.rs  entities.rs  environment.rs  options.rs
