[package]
name = "amplrs"
version = "0.1.1"
edition = "2021"
description = "Safe Rust API for AMPL optimization modeling system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOURNAME/amplrs"
readme = "README.md"
keywords = ["ampl", "optimization", "ffi", "linear-programming"]
categories = ["api-bindings"]

[dependencies]
ampl-sys = "0.1.0"
libc = "0.2"
