[package]
name = "amplrs"
version = "0.1.5"
edition = "2024"
description = "Safe Rust API for AMPL optimization modeling system"
license = "MIT"
repository = "https://github.com/jurgen-lentz/amplrs"
readme = "README.md"
keywords = ["ampl", "optimization", "ffi", "linear-programming"]
categories = ["api-bindings"]

[dependencies]
ampl-sys = "0.1.0"
libc = "0.2"
